# cmake_build_system

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
make/: CMakeLists.txt  generate_moddeps.py  make_module.py
